# Campus-Mangment-System

./: AddCourse.h  AdminCheckStudent.h  AssignCourses.h  CMakeLists.txt  CheckAssigment.h  CheckQuiz.h  CheckStudentProfile.h  FacuityMemberCheck.h  FaculityCheckCourses.h  FaculityCheckStudent.h  FaculityLogin.h  FaculityUpdateUsernamePassword.h  FacultyMember.h  GivesMarks.h  LoginStudent.h  Person.h  README.md  RemoveCourse.h  RemoveFaculity.h  RemoveStaff.h  RemoveStudent.h  StaffMember.h  StaffMemeberCheck.h  StudentCheckAttendence.h  StudentCheckGpa.h  StudentEnrollCourses.h  StudentUpdateUsernamePassword.h  Studentdetails.h  UpdateCourse.h  UpdateFaculity.h  UpdateStaff.h  UpdateStudentProfile.h  UploadAssigment.h  UploadQuiz.h  main.cpp
